# webinar-specklepy-crashcourse

./: .gitignore  README.md  pyproject.toml
specklepy_crash_course/: 01_the_base_object.py  02_the_speckle_client.py  03_transports.py  04_extending_base.py
