[tool.poetry]
name = "specklepy_crash_course"
version = "0.1.0"
description = ""
authors = ["izzy lyseggen <izzy.lyseggen@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.5, <4.0.0"
specklepy = "^2.5.0"

[tool.poetry.dev-dependencies]
devtools = "^0.8.0"
black = "^21.12b0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
